tests/compile-fail/stacked_borrows/outdated_local.stderr
error: Undefined Behavior: attempting a read access using <untagged> at alloc965[0x0], but that tag does not exist in the borrow stack for this location
 --> $DIR/outdated_local.rs:6:25
  |
6 |     assert_eq!(unsafe { *y }, 1); //~ ERROR borrow stack
  |                         ^^
  |                         |
  |                         attempting a read access using <untagged> at alloc965[0x0], but that tag does not exist in the borrow stack for this location
  |                         this error occurs as part of an access at alloc965[0x0..0x4]
  |
  = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
  = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
          
  = note: inside `main` at $DIR/outdated_local.rs:6:25

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

